@@ -23,6 +23,12 @@
 	* Makefile.in: Regenerate.
 	* configure: Regenerate.
 
+2014-11-19  Wilco Dijkstra  <wdijkstr@arm.com>
+
+       PR target/61915
+       * config/aarch64/aarch64.c (generic_regmove_cost): Increase FP move
+       cost.
+
 2014-11-19  Renlin Li  <Renlin.Li@arm.com>
 
 	PR middle-end/63762
